--- a/src/components/domain/RiskSeasonalMap/styles.module.css
+++ b/src/components/domain/RiskSeasonalMap/styles.module.css
@@ -5,7 +5,7 @@
     .content {
         display: flex;
         height: 40rem;
-        gap: var(--go-ui-spacing-xl);
+        gap: var(--go-ui-spacing-md);
 
         .map-container {
             flex-grow: 1;
